Crash when baking with adaptive subdivision #49405

Closed
opened 2016-09-19 22:11:19 +02:00 by Ken · 7 comments

System Information
Windows 10 64 bit

Blender Version
2.78 RC2

Crashes when baking onto mesh with micro displacement + adaptive subdivision on. But doesn't crash when baking to selected with adaptive on.

testing_stuff.blend

**System Information** Windows 10 64 bit **Blender Version** 2.78 RC2 Crashes when baking onto mesh with micro displacement + adaptive subdivision on. But doesn't crash when baking to selected with adaptive on. [testing_stuff.blend](https://archive.blender.org/developer/F364249/testing_stuff.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KennethThomas

Added subscriber: @KennethThomas
Mai Lavelle was assigned by Sergey Sharybin 2016-09-20 11:25:11 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Member

This is a result of a limitation in the design of the baking api, which will have to be completely redesigned to allow for baking on meshes with topology that differs from Blenders internal representation. No idea when this will happen. In the meantime we should probably just disable adaptive subdivision when baking is used.

This is a result of a limitation in the design of the baking api, which will have to be completely redesigned to allow for baking on meshes with topology that differs from Blenders internal representation. No idea when this will happen. In the meantime we should probably just disable adaptive subdivision when baking is used.

This issue was referenced by blender/cycles@a2e11c7d3b

This issue was referenced by blender/cycles@a2e11c7d3b0d67f436c5154356f0887c26868a24

This issue was referenced by a7d5cabd4e

This issue was referenced by a7d5cabd4e86b7b750fadbd087b97f900009fb09
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49405
No description provided.